--- a/package.json
+++ b/package.json
@@ -13,5 +13,16 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "MIT"
+	"license": "MIT",
+	"dependencies": {
+		"axios": "^0.27.2",
+		"jest": "^29.1.2"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.11.4",
+		"jest-junit": "^14.0.1"
+	},
+	"jest-junit": {
+		"addFileAttribute": "true"
+	}
 }
